--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </div>
     </div>
 
+    <div>
+        <p>hello world</p>
+    </div>
+
     <script src="./scripts/elem.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
